--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "keywords": [],
   "author": "Steve Meyer",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/notoriaga/tar-checksum.git"
+  },
   "engines": {
     "node": ">=6.4.0"
   },
